Add YamlMime:FAQ to app-service-security-faq.yml

--- a/support/azure/app-service/app-service-security-faq.yml
+++ b/support/azure/app-service/app-service-security-faq.yml
@@ -1,3 +1,4 @@
+### YamlMime:FAQ
 metadata:
   title: FAQs about App Service Security
   description: Describes common questions and answers about App Service Security
