--- a/Outlook/Client/clienttoc/toc.yml
+++ b/Outlook/Client/clienttoc/toc.yml
@@ -465,6 +465,8 @@
           href: ../security/results-for-advanced-diagnostic-indicate-offline-scan-was-forced.md
         - name: Can't add sender's domain to Blocked Senders list
           href: ../security/no-shortcut-menu-command-to-add-senders-domain-to-blocked.md
+        - name: '"Conflicting or unsupported encryption" warning when sending an encrypted message'
+          href: ../security/outlook-warning-dialog-when-sending-smime-messages.md
         - name: DLP Policy Tip notifications are not displayed
           href: ../security/can't-display-dlp-policytip.md
         - name: DLP policy tips for PDF attachments aren't shown
