Add reviewed files

--- a/support/windows-365/toc.yml
+++ b/support/windows-365/toc.yml
@@ -1,25 +1,27 @@
 items:
-- name: Troubleshooting
-  href: ./troubleshoot-windows-365-business.md
-- name: Known issues
-  href: ./known-issues.md
-- name: Known issues enterprise
-  href: ./known-issues-enterprise.md
-- name: Azure network connections
-  href: ./troubleshoot-azure-network-connection.md
+- name: Windows 365
+  href: ./welcome-windows-365.yml
 - name: Azure network connection health checklist
   href: ./health-checks.md
 - name: Connection errors
   href: ./connection-errors.md
+- name: Known issues with Windows 365 Business
+  href: ./known-issues.md
+- name: Known issues with Windows 365 Enterprise and Frontline
+  href: ./known-issues-enterprise.md
 - name: Provisioning errors
   href: ./provisioning-errors.md
-- name: Partner connectors
+- name: Troubleshoot Azure network connections
+  href: ./troubleshoot-azure-network-connection.md
+- name: Troubleshoot partner connectors
   href: ./troubleshoot-partner-connector.md
-- name: Windows 365 app
+- name: Troubleshoot Windows 365 app
   href: ./troubleshoot-windows-365-app.md
-- name: Windows 365 Boot
+- name: Troubleshoot Windows 365 Boot
   href: ./troubleshoot-windows-365-boot.md
 - name: Windows 365 Boot known issues
   href: ./windows-365-boot-known-issues.md
+- name: Windows 365 setup issues
+  href: ./troubleshoot-windows-365-business.md
 - name: Windows 365 Switch known issues
   href: ./windows-365-switch-known-issues.md
