--- a/support/windows-365/welcome-windows-365.yml
+++ b/support/windows-365/welcome-windows-365.yml
@@ -3,7 +3,7 @@
 title: Windows 365 troubleshooting # < 60 chars
 summary: This library provides solutions enabling IT Pros to troubleshoot Windows 365 related issues. To bring you the most accurate content, this library is managed by a team that works directly with the Windows product group and support professionals.
 metadata:
-  title: Windows client troubleshooting documentation
+  title: Windows 365 troubleshooting documentation
   description: Documentation for troubleshooting common issues with Windows 365. # Required; article description that is displayed in search results. < 160 chars.  
   ms.topic: landing-page # Required
   author: Deland-Han  #Required; your GitHub user alias, with correct capitalization.
@@ -19,9 +19,9 @@ landingContent:
     linkLists:
       - linkListType: how-to-guide
         links:
-          - text: Known issues
+          - text: Known issues with Windows 365 Business
             url: ./known-issues.md
-          - text: Known issues enterprise
+          - text: Known issues with Windows 365 Enterprise and Frontline
             url: ./known-issues-enterprise.md
           - text: Connection errors
             url: ./connection-errors.md
