--- a/support/azure/app-service/toc.yml
+++ b/support/azure/app-service/toc.yml
@@ -7,7 +7,7 @@
   - name: Create or delete web apps FAQs
     href: ./create-delete-resources-faq.yml
   - name: App service security FAQs
-    href: app-service-security-faq.yml
+    href: faqs-web-app-security.md
   - name: Availability, performance, and application FAQs
     href: web-apps-performance-faqs.md
   - name: App Service Compliance with PCI Standards 3.0 and 3.1
