--- a/support/azure/index.yml
+++ b/support/azure/index.yml
@@ -118,7 +118,7 @@ productDirectory:
     imageSrc: "https://static.docs.com/ui/media/product/azure/virtual-desktop.svg"
     links:
     - url: virtual-desktop/welcome-virtual-desktop.yml
-      text: Troubleshoot common Azure Virtual Desktop issues
+      text: Troubleshooting articles for Azure Virtual Desktop
   - title: Virtual Machines
     imageSrc: "https://static.docs.com/ui/media/product/azure/virtual-machine.svg"
     links:
