--- a/support/windows-server/toc.yml
+++ b/support/windows-server/toc.yml
@@ -2149,6 +2149,8 @@ items:
       href: ./remote/local-policy-not-permit-log-on-interactively.md
     - name: New user fails to log on through RDP
       href: ./remote/not-enough-storage-available-to-process-command.md
+    - name: Ports that are used by RDS
+      href: ./remote/ports-used-by-rds.md
     - name: Registry Size Limit (RSL) functionality is still be honored
       href: ./remote/honors-registry-size-limit-functionality-key-set.md
     - name: Remote Control prompts for user permission
