Update SUSE node reboots troubleshooting title

--- a/support/azure/virtual-machines/linux/toc.yml
+++ b/support/azure/virtual-machines/linux/toc.yml
@@ -286,7 +286,7 @@
       href: troubleshoot-pacemaker-services-suse.md
     - name: Troubleshoot SBD service failure in SUSE
       href: troubleshoot-sbd-issues-sles.md
-    - name: Troubleshoot Unexpected Node Reboots in SUSE Pacemaker Cluster
+    - name: Troubleshoot unexpected node reboots issues in SUSE
       href: troubleshoot-unexpected-node-reboots-pacemaker-suse.md
       
       
