--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -154,8 +154,8 @@ items:
     href: site-behavior-performance/internet-printing-fails.md
   - name: Runtime errors and exceptions
     items:
-    - name: 
-      href:
+    - name: Troubleshoot HTTP Errors in IIS
+      href: site-behavior-performance/troubleshoot-http-error-code.md
   - name: Troubleshoot HTTP 400 errors in IIS
     href: site-behavior-performance/troubleshoot-http-400-errors-in-iis.md
   - name: Troubleshoot HTTP 502.2 Bad Gateway error in CGI apps
