--- a/support/developer/visualstudio/cpp/libraries/toc.yml
+++ b/support/developer/visualstudio/cpp/libraries/toc.yml
@@ -1,11 +1,11 @@
+- name: _stat-family function can't support Symbolic Directory Link
+  href: ./_stat-family-cannot-support-symbolic-directory-link.md
 - name: Microsoft Visual C++ Redistributable latest supported downloads
   href: /cpp/windows/latest-supported-vc-redist?context=/troubleshoot/developer/context/context
 - name: Redistributable Package installation fails
   href: ./runtime-installation-fails.md
 - name: C2653 or C2039 error when you reference a STD function
   href: ./c2653-c2039-error-reference-function.md
-- name: Call Run() method of a Script control
-  href: ./call-script-control-run-method.md
 - name: Can't change the state of a menu item
   href: ./cannot-change-state-menu-item.md
 - name: Change mouse pointer for a window in MFC
@@ -44,8 +44,6 @@
   href: ./stack-top-empty-stl-function.md
 - name: Use STL sqrt and pow functions
   href: ./stl-sqrt-pow-functions.md
-- name: Use string arrays
-  href: ./use-string-arrays.md
 - name: Use random_shuffle STL function
   href: ./use-random-shuffle-stl.md
 - name: Use set::find STL function
