--- a/support/developer/visualstudio/ide/toc.yml
+++ b/support/developer/visualstudio/ide/toc.yml
@@ -2,8 +2,12 @@
   href: ./visual-studio-2013-startup-crashes.md
 - name: Can't dismiss developer license notifications
   href: ./developer-license-notification-not-dismiss.md
-- name: Can't switch between organizational accounts
-  href: ./cannot-switch-accounts.md
+- name: Can't find resources in XAML or WPF designer
+  href: ./cannot-find-resource-named-error.md
+- name: Can't sign in when JavaScript is disabled
+  href: ./cannot-sign-in-javascript-disabled.md
+- name: Can't start Windows Simulator
+  href: ./cannot-start-windows-simulator.md
 - name: Issues when creating and deploying Azure resource groups
   href: ./troubleshoot-create-deploy-resource-group.md
 - name: Performance and crashes issues
@@ -12,8 +16,6 @@
   href: ./release-management-client-crash.md
 - name: Screen readers can't read tool windows
   href: ./screen-readers-not-read-tool-windows.md
-- name: The trial will expire after you sign in to the IDE
-  href: ../installation/sign-into-ide-trial-expire.md
 - name: Troubleshoot Class Designer errors
   href: ./troubleshoot-class-designer-errors.md
 - name: Troubleshoot Docker client errors on Windows
@@ -22,8 +24,10 @@
   href: ./troubleshooting-code-coverage.md
 - name: Troubleshoot issues with IntelliSense code snippets
   href: ./troubleshooting-snippets.md
-- name: Troubleshoot specific errors in ClickOnce deployments
-  href: ./troubleshoot-clickonce-deployments.md
+- name: Troubleshoot references to WCF or WCF Data Services
+  href: ./troubleshooting-service-references.md
+- name: Troubleshoot XAML Hot Reload
+  href: ./xaml-hot-reload-troubleshooting.md
 - name: Visual Studio 2012 crashes with StarDict-3
   href: ./crash-with-stardict-3.md
 - name: Unrecoverable process error
