--- a/support/developer/visualstudio/project-build/toc.yml
+++ b/support/developer/visualstudio/project-build/toc.yml
@@ -4,6 +4,12 @@
   href: ./build-errors-delete-debug-configuration.md
 - name: Building a Windows 10 driver fails
   href: ./building-windows-10-driver-fails.md
+- name: Error when you build applications
+  href: ./not-transform-license-file-to-binary-resource.md
+- name: Files can't be saved when you use Resource Editor
+  href: ./resource-editor-cannot-save-file.md
+- name: NuGet-based Package Manager is missing
+  href: ./nuget-based-package-manager-missing.md
 - name: Troubleshoot .NET Framework targeting errors
   href: ./troubleshooting-dotnet-framework-targeting-errors.md
 - name: Troubleshoot project templates and item templates
