--- a/support/developer/webapps/iis/health-diagnostic-performance/toc.yml
+++ b/support/developer/webapps/iis/health-diagnostic-performance/toc.yml
@@ -1,38 +1,28 @@
 items:
 - name: An application pool exceeds time limits
   href: application-pool-exceed-time-limits.md
-- name: Data collection strategies of Web Server issues
-  href: data-collection-strategies.md
+- name: Can't access Web sites when security event log is full
+  href: users-cannot-access-web-sites-when-log-full.md
+- name: Child requests generate duplicate events
+  href: duplicate-aspnet-events.md
+- name: Design customization IIS log file field names
+  href: customize-iis-log-file-field-names.md
 - name: Enable Failed Request Tracing for UNC hosting
   href: how-to-enable-frt-for-unc-hosting.md
 - name: Enable Schannel event logging in Windows
   href: enable-schannel-event-logging.md
 - name: ETW logs diagnostic
   href: etw-log-diagnostic.md
-- name: Hidden static files return HTTP 404 error
-  href: hidden-static-files-http-404-access-denied.md
-- name: HTTP error 400 in the CLM portal
-  href: clm-http-bad-request.md
-- name: HTTP error 403.7
-  href: http-error-403-7-forbidden-web-app.md
-- name: HTTP error 404 file not found on a server
-  href: troubleshoot-404-file-not-found-error.md
-- name: HTTP error 404.13
-  href: http-404-13-website.md
-- name: HTTP error 404.17 when you visit a Web site
-  href: error-message-you-visit-web-site.md
-- name: HTTP error 405.0
-  href: http-error-405-website.md
-- name: HTTP error 500.19
-  href: http-error-500-19-webpage.md
-- name: HTTP error 501 - Not Implemented
-  href: http-error-501-not-implemented.md
 - name: HTTP status code
   href: http-status-code.md
+- name: Http.sys registry settings for Windows
+  href: httpsys-registry-windows.md
+- name: IIS events are not displayed remotely
+  href: iis-events-not-display-remotely.md
 - name: Logs contain dots instead of logging field value
   href: iis-logs-contain-dots.md
-- name: Pages can't be displayed
-  href: cannot-access-site-using-https.md
+- name: Processor affinity doesn't work on a NUMA server
+  href: processor-affinity-not-work.md
 - name: Time-taken field in IIS HTTP logging
   href: time-taken-field-http-log.md
 - name: Troubleshoot ARR using Failed Request Tracing rules
@@ -41,8 +31,6 @@ items:
   href: troubleshoot-classic-asp-errors-with-frt.md
 - name: Troubleshoot failed requests using tracing in IIS 8.5
   href: troubleshoot-failed-requests-using-tracing-in-iis-85.md
-- name: Troubleshoot high CPU usage in an IIS app pool
-  href: troubleshoot-high-cpu-in-iis-app-pool.md
 - name: Troubleshoot PHP errors with Failed Request Tracing
   href: troubleshoot-php-with-failed-request-tracing.md
 - name: Troubleshoot IIS performance issues and application errors
