--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -3,18 +3,26 @@ items:
   href: iis-welcome.yml
 - name: Active Server Pages
   items:
+  - name: ASP support in Windows
+    href: active-server-pages/asp-support-windows.md
+  - name: Can't call MTS COM from ASP
+    href: active-server-pages/server-execution-fail-call-mts-com-asp.md
   - name: Can't create objects when an application runs
     href: active-server-pages/cannot-create-object-asp-applications-run.md
   - name: Create GUIDs
     href: active-server-pages/create-guids-asp.md
   - name: Error ASP 0178 when you instantiate COM object
     href: active-server-pages/server-object-error-asp-0178-occurs.md
+  - name: Event handles may leak
+    href: active-server-pages/event-handles-leaked.md
   - name: Read and display binary data using ServerXMLHTTP
     href: active-server-pages/read-and-display-binary-data-serverxmlhttp.md
   - name: Run SQL Server stored procedures from an ASP Page
     href: active-server-pages/run-sql-server-stored-procedures-asp-page.md
   - name: Set locale ID per the browser's language
     href: active-server-pages/set-asp-locale-id-browser-language.md
+  - name: Troubleshooting 502 errors in ARR
+    href: active-server-pages/troubleshooting-502-errors-in-arr.md
   - name: VBScript type mismatch error
     href: active-server-pages/vbscript-type-mismatch-error.md
   - name: XMLHttpRequest setRequestHeader method and Cookies
@@ -26,112 +34,107 @@ items:
     href: application-request-routing/affinity-not-honored-ssl-common-names-arr.md
   - name: Troubleshooting cache items in ARR version 2.0 or later
     href: application-request-routing/troubleshooting-cache-items-arr-v2-or-later.md
-  - name: Troubleshooting 502 errors in ARR
-    href: application-request-routing/troubleshooting-502-errors-in-arr.md
 
 - name: Development
   items:
-  - name: Add an HTTP response header to a web site
-    href: development/add-http-response-header-web-site.md
   - name: Applications can't run in Integrated Pipeline mode
     href: development/exception-integrated-pipeline-mode.md
-  - name: Assign a private key to a new certificate
-    href: development/assign-certificate-private-key.md
-  - name: Child requests generate duplicate events
-    href: development/duplicate-aspnet-events.md
+  - name: Calling PostCompletion twice may cause crash
+    href: development/calling-postcompletion-cause-crash.md
   - name: Cookies aren't available
     href: development/cookie-unavailable-ihttpmodules-ihttphandler.md
-  - name: Fail to upload files to WebDav directory
-    href: development/upload-to-webdav-directory-fails.md
-  - name: HTTP error 403.6 when you open ISS webpage
-    href: development/403-6-forbidden-error.md
   - name: Make a GET request
     href: development/make-get-request.md
 
 - name: Deployment and migration
   items:
+  - name: Can't change identity of an application pool
+    href: deployment-migration/0x80090016-change-application-pool-identity.md
   - name: Can't use Web Deploy as a delegated user
     href: deployment-migration/cannot-use-web-deploy.md
   - name: Can't use Web Deployment as a non-admin user
     href: deployment-migration/web-deploy-error-non-admin-user.md
+  - name: HTTP services can't be stopped
+    href: deployment-migration/http-service-fail-stopped.md
   - name: Troubleshoot common problems related to Web Deploy
     href: deployment-migration/troubleshoot-common-problems-with-web-deploy.md
   - name: Troubleshooting Web Deploy problems with Visual Studio
     href: deployment-migration/troubleshoot-web-deploy-problems-with-visual-studio.md
   - name: Web Deploy error codes
-    href: deployment-migration/web-deploy-error-codes.md  
+    href: deployment-migration/web-deploy-error-codes.md
 
 - name: FTP authentication and authorization
   items:
   - name: Authorization rules aren't inherited
     href: ftp-authentication-authorization/ftp-authorization-rules-not-inherited.md
+  - name: Download session fails when connection is closed
+    href: ftp-authentication-authorization/ftp-download-session-fails.md
   - name: Error 530 when you browse anonymous sites
     href: ftp-authentication-authorization/error-530-anonymous-ftp-sites.md
-  - name: Use FTP in a typical session
-    href: ftp-authentication-authorization/how-to-use-ftp-utility.md
 
-- name: FTP service and Svchost or Inetinfo process operation
+- name: FTP administration and management
   items:
-  - name: Changes in FTP 7.5
-    href: ftp-service-svchost-inetinfo/changes-in-ftp-7-5.md
-  - name: Download session fails when connection is closed
-    href: ftp-service-svchost-inetinfo/ftp-download-session-fails.md
   - name: Error when you create an FTP site
     href: ftp-service-svchost-inetinfo/error-create-ftp-site.md
   - name: Status codes in IIS 7.0 and later versions
     href: ftp-service-svchost-inetinfo/ftp-status-codes-iis-7-and-later-versions.md
 
+- name: FTP service and Svchost or Inetinfo process operation
+  items:
+  - name: Changes in FTP 7.5
+    href: ftp-service-svchost-inetinfo/changes-in-ftp-7-5.md
+  - name: Use FTP in a typical session
+    href: ftp-service-svchost-inetinfo/how-to-use-ftp-utility.md
+
 - name: General
   items:
-  - name: ASP support in Windows
-    href: general/asp-support-windows.md
-  - name: Description of registry keys
-    href: general/use-registry-keys.md
-  - name: Design customization IIS log file field names
-    href: general/customize-iis-log-file-field-names.md
   - name: IIS Express isn't supported in production environment
     href: general/express-not-supported-production-environment.md
-  - name: Can't access Web sites when security event log is full
-    href: general/users-cannot-access-web-sites-when-log-full.md
 
 - name: Health, diagnostic, and performance features
   href: health-diagnostic-performance/toc.yml
 
 - name: IISAdmin service and Inetinfo process operation
   items:
-  - name: Error when you use IISReset.exe to restart IIS
-    href: iisadmin-service-inetinfo/using-iisreset-restart-iis-result-error.md
-  - name: HTTP services can't be stopped
-    href: iisadmin-service-inetinfo/http-service-fail-stopped.md
-  - name: Http.sys registry settings for Windows
-    href: iisadmin-service-inetinfo/httpsys-registry-windows.md
-  - name: Processor affinity doesn't work on a NUMA server
-    href: iisadmin-service-inetinfo/processor-affinity-not-work.md
-  - name: Set multiple site bindings and SSL
-    href: iisadmin-service-inetinfo/ssl-multiple-web-sites-shared-configuration.md
+  - name: Fail to generate the certificate request
+    href: iisadmin-service-inetinfo/failed-generate-certificate-request.md
 
 - name: Site behavior and performance
   items:
   - name: 0-byte file is returned
     href: site-behavior-performance/0-byte-file-compression-enabled.md
+  - name: Access is denied when you call web services
+    href: site-behavior-performance/access-denied-call-web-service.md
   - name: Authorization for requests to default document fails
     href: site-behavior-performance/authorization-fails-default-documents.md
-  - name: Can't view websites over SSL
-    href: site-behavior-performance/cannot-view-website-using-ssl.md
-  - name: Calling PostCompletion twice may cause crash
-    href: site-behavior-performance/calling-postcompletion-cause-crash.md
-  - name: Can't call MTS COM from ASP
-    href: site-behavior-performance/server-execution-fail-call-mts-com-asp.md
-  - name: Event handles may leak
-    href: site-behavior-performance/event-handles-leaked.md
-  - name: Event ID 115 when you connect HTTPS websites
-    href: site-behavior-performance/event-115-connect-https-website.md
-  - name: Fail to generate the certificate request
-    href: site-behavior-performance/failed-generate-certificate-request.md
+  - name: Data collection strategies of Web Server issues
+    href: site-behavior-performance/data-collection-strategies.md
+  - name: Hidden static files return HTTP 404 error
+    href: site-behavior-performance/hidden-static-files-http-404-access-denied.md
+  - name: HTTP error 400 in the CLM portal
+    href: site-behavior-performance/clm-http-bad-request.md
+  - name: HTTP error 404.13
+    href: site-behavior-performance/http-404-13-website.md
+  - name: HTTP error 404.17 when you visit a Web site
+    href: site-behavior-performance/error-message-you-visit-web-site.md
+  - name: HTTP error 403.6 when you open ISS webpage
+    href: site-behavior-performance/403-6-forbidden-error.md
+  - name: HTTP error 403.7
+    href: site-behavior-performance/http-error-403-7-forbidden-web-app.md
   - name: HTTP error 401.1 with pre-authentication headers
     href: site-behavior-performance/401-error-preauthentication-header.md
   - name: HTTP error 403.14
     href: site-behavior-performance/http-403-14-forbidden-webpage.md
+  - name: HTTP error 403.7
+    href: site-behavior-performance/http-403-forbidden-open-webpage.md
+  - name: HTTP error 404 file not found on a server
+    href: site-behavior-performance/troubleshoot-404-file-not-found-error.md
+  - name: HTTP error 405.0
+    href: site-behavior-performance/http-error-405-website.md
+  - name: HTTP error 500.19
+    href: site-behavior-performance/http-error-500-19-webpage.md
+  - name: HTTP error 501 - Not Implemented
+    href: site-behavior-performance/http-error-501-not-implemented.md
   - name: High memory usage
     items:
     - name: High memory consumption issue overview
@@ -152,6 +155,8 @@ items:
     href: site-behavior-performance/http-500-response-binarywrite.md
   - name: Internet printing fails
     href: site-behavior-performance/internet-printing-fails.md
+  - name: Troubleshoot high CPU usage in an IIS app pool
+    href: site-behavior-performance/troubleshoot-high-cpu-in-iis-app-pool.md
   - name: Troubleshoot HTTP 400 errors in IIS
     href: site-behavior-performance/troubleshoot-http-400-errors-in-iis.md
   - name: Troubleshoot HTTP 502.2 Bad Gateway error in CGI apps
@@ -159,24 +164,37 @@ items:
   - name: Worker Process takes much memory
     href: site-behavior-performance/work-process-takes-much-memory.md
 
+- name: WAS Service and Svchost Process Operation
+  items:
+  - name: ShutdownTimeLimit property doesn't work
+    href: was-service-svchost-process-operation/shutdowntimelimit-not-apply-to-wcf.md
+  - name: Understanding identities
+    href: was-service-svchost-process-operation/understanding-identities.md
+
 - name: WWW administration and management
   items:
-  - name: Configure the default document in IIS
-    href: www-administration-management/configure-default-document-iis.md
+  - name: Add an HTTP response header to a web site
+    href: www-administration-management/add-http-response-header-web-site.md
+  - name: Add and remove global modules at server and child levels 
+    href: www-administration-management/add-remove-global-modules.md
+  - name: Configure W3SVC in WSFC
+    href: www-administration-management/configure-w3svc-wsfc.md
   - name: Content types for HTTP compression
     href: www-administration-management/content-types-http-compression.md
   - name: Default permissions and user rights
     href: www-administration-management/default-permissions-user-rights.md
+  - name: Description of registry keys
+    href: www-administration-management/use-registry-keys.md
   - name: Diagnosing failures with remote administration
     href: www-administration-management/diagnosing-failures-with-remote-administration.md
-  - name: Enable SSL for all customers
-    href: www-administration-management/enable-ssl-all-customers.md
-  - name: Error when you configure 32-bit managed handlers
-    href: www-administration-management/error-when-you-configure-32-bit-handlers.md
-  - name: HTTPS connections fail and SSL bindings are deleted
-    href: www-administration-management/https-connections-fail-ssl-bindings-deleted.md
-  - name: IIS events are not displayed remotely
-    href: www-administration-management/iis-events-not-display-remotely.md
+  - name: Error when you use IISReset.exe to restart IIS
+    href: www-administration-management/using-iisreset-restart-iis-result-error.md
+  - name: Exporting configuration files fails
+    href: www-administration-management/configuration-files-cannot-exported.md
+  - name: Event ID 115 when you connect HTTPS websites
+    href: www-administration-management/event-115-connect-https-website.md
+  - name: Shared Configuration requires the same IIS version
+    href: www-administration-management/shared-configuration-require-same-version.md
   - name: Information associated with IIS site isn't deleted
     href: www-administration-management/information-associated-iis-site-is-not-deleted.md
   - name: Troubleshooting IIS 7.x installation problems
@@ -184,16 +202,14 @@ items:
 
 - name: WWW authentication and authorization
   items:
-  - name: Access is denied when you call web services
-    href: www-authentication-authorization/access-denied-call-web-service.md
+  - name: Assign a private key to a new certificate
+    href: www-authentication-authorization/assign-certificate-private-key.md
   - name: Changing IP/port causes sites to fail
     href: www-authentication-authorization/change-ip-port-wildcard-certificate-site-fail.md
   - name: Can't import .pfx files to personal certificate store
     href: www-authentication-authorization/cannot-import-ssl-pfx-local-certificate.md
-  - name: Can't change identity of an application pool
-    href: www-authentication-authorization/0x80090016-change-application-pool-identity.md
-  - name: Configure W3SVC in WSFC
-    href: www-authentication-authorization/configure-w3svc-wsfc.md
+  - name: Can't view websites over SSL
+    href: www-authentication-authorization/cannot-view-website-using-ssl.md
   - name: Configure intermediate certificates
     href: www-authentication-authorization/configure-intermediate-certificates.md
   - name: Configure Many-to-One client mappings
@@ -202,14 +218,14 @@ items:
     href: www-authentication-authorization/diagnostics-pages-windows-integrated-authentication.md
   - name: Digest authentication fails
     href: www-authentication-authorization/digest-authentication.md
+  - name: Enable SSL for all customers
+    href: www-authentication-authorization/enable-ssl-all-customers.md
   - name: Errors when you install certificates
     href: www-authentication-authorization/error-install-certificate.md
-  - name: Exporting configuration files fails
-    href: www-authentication-authorization/configuration-files-cannot-exported.md
+  - name: HTTPS connections fail and SSL bindings are deleted
+    href: www-authentication-authorization/https-connections-fail-ssl-bindings-deleted.md
   - name: HTTP error 400 when you send requests
     href: www-authentication-authorization/http-bad-request-response-kerberos.md
-  - name: HTTP error 403.7
-    href: www-authentication-authorization/http-403-forbidden-open-webpage.md
   - name: IIS authenticates browser clients
     href: www-authentication-authorization/iis-authenticates-browser-client.md
   - name: IIS may reject requests with HTTP 403.7 or 403.16 errors
@@ -218,25 +234,27 @@ items:
     href: www-authentication-authorization/impersonation-fails-uac-enabled.md
   - name: Kerberos double-hop authentication with Microsoft Edge
     href: www-authentication-authorization/kerberos-double-hop-authentication-edge-chromium.md
+  - name: Pages can't be displayed
+    href: www-authentication-authorization/cannot-access-site-using-https.md
   - name: Read and analyze a client certificate
     href: www-authentication-authorization/analyze-client-certificate.md
-  - name: Shared Configuration requires the same IIS version
-    href: www-authentication-authorization/shared-configuration-require-same-version.md
-  - name: ShutdownTimeLimit property doesn't work
-    href: www-authentication-authorization/shutdowntimelimit-not-apply-to-wcf.md
+  - name: Set multiple site bindings and SSL
+    href: www-authentication-authorization/ssl-multiple-web-sites-shared-configuration.md
   - name: Troubleshoot Kerberos failures
     href: www-authentication-authorization/troubleshoot-kerberos-failures-ie.md
   - name: Troubleshooting Forms Authentication
     href: www-authentication-authorization/troubleshooting-forms-authentication.md
   - name: Troubleshooting SSL related issues (Server Certificate)
     href: www-authentication-authorization/troubleshooting-ssl-related-issues-server-certificate.md
-  - name: Understanding identities
-    href: www-authentication-authorization/understanding-identities.md
 
 - name: WWW modules and features
   items:
-  - name: Add and remove global modules at server and child levels 
-    href: www-modules-features/add-remove-global-modules.md
+  - name: Configure the default document in IIS
+    href: www-modules-features/configure-default-document-iis.md
+  - name: Error when you configure 32-bit managed handlers
+    href: www-modules-features/error-when-you-configure-32-bit-handlers.md
+  - name: Fail to upload files to WebDav directory
+    href: www-modules-features/upload-to-webdav-directory-fails.md
   - name: Instances where HTTP.sys doesn't cache
     href: www-modules-features/instances-httpsys-not-cache.md
   - name: Request Restrictions can't set for a wildcard ISAPI
