--- a/support/developer/webapps/iis/toc.yml
+++ b/support/developer/webapps/iis/toc.yml
@@ -154,7 +154,7 @@ items:
     href: site-behavior-performance/internet-printing-fails.md
   - name: Runtime errors and exceptions
     items:
-    - name: Troubleshoot HTTP Errors in IIS
+    - name: Troubleshoot HTTP errors in IIS
       href: site-behavior-performance/troubleshoot-http-error-code.md
   - name: Troubleshoot HTTP 400 errors in IIS
     href: site-behavior-performance/troubleshoot-http-400-errors-in-iis.md
