--- a/support/power-platform/power-apps/toc.yml
+++ b/support/power-platform/power-apps/toc.yml
@@ -6,6 +6,8 @@
       href: connections/best-practices-when-updating-a-flow.md
     - name: Refresh URL isn't displayed for custom connectors
       href: connections/custom-connectors-not-show-refresh-url.md
+    - name: Troubleshoot broken connections
+      href: /power-automate/connections/troubleshoot-broken-connections?context=/troubleshoot/power-platform/power-apps/context/context
     - name: Troubleshoot Power Query
       href: connections/troubleshoot-power-query-issues.md
 - name: Create and use apps
