--- a/support/power-platform/power-apps/welcome-power-apps.yml
+++ b/support/power-platform/power-apps/welcome-power-apps.yml
@@ -7,7 +7,7 @@ metadata:
   description: Landing page for Power Apps troubleshooting articles. # Required; article description that is displayed in search results. < 160 chars.
   ms.service: powerapps #Required; service per approved list. service slug assigned to your service by ACOM.
   ms.topic: landing-page # Required
-  ms.date: 07/08/2024
+  ms.date: 01/27/2025
   author: ChristySu #Required; your GitHub user alias, with correct capitalization.
   ms.author: christys #Required; microsoft alias of author; optional team alias.
 
@@ -33,6 +33,14 @@ landingContent:
             url: sign-in/troubleshooting-startup-issues.md
           - text: Troubleshoot Power Query issues
             url: connections/troubleshoot-power-query-issues.md
+
+   # Card
+  - title: Connections
+    linkLists:
+      - linkListType: how-to-guide
+        links:
+          - text: Troubleshoot broken connections
+            url: ../power-automate/connections/troubleshoot-broken-connections.md?context=/troubleshoot/power-platform/power-apps/context/context      
 
   # Card
   - title: Create and use apps
