Move this article to new subfolder and update TOC

--- a/support/power-platform/power-apps/toc.yml
+++ b/support/power-platform/power-apps/toc.yml
@@ -1,5 +1,9 @@
 - name: Power Apps Troubleshooting
   href: welcome-power-apps.yml
+- name: Canvas App Performance
+  items:
+    - name: Troubleshoot Power Apps canvas app performance issues
+      href: canvas-app-performance/troubleshoot-perf-table.md
 - name: Connections
   items:
     - name: Best practices when updating a flow
